melhoreando a página inicial

--- a/CCG/Pagina_inicial/app/html/pagina_inicial.html
+++ b/CCG/Pagina_inicial/app/html/pagina_inicial.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Empresa CCG</title>
+    <link rel="stylesheet" href="../statics/css/style.css">
 </head>
-<body>
-    <h1>Ola </h1>
+<body >
+    <header class= 'navbar'>
+        <a href="">sobre nós </a>
+        <a href=""> sites da empresa</a>
+    </header>
+
+
+    <section class="banner-container">
+        <div class="container1">
+            <h1>Empresa CCG</h1>
+            <p>Conheça mais sobre a empresa CCG</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non reiciendis dolorum atque facere dignissimos voluptates sed libero, quam corporis praesentium aliquam vel? Et rerum maiores similique? Quia eveniet molestias aliquam?</p>
+        </div>
+
+        <img src="../statics/img/Empresa-ccg.jpg" alt="Logo da empresa CCG">
+        
+
+    </section>
+
+
+
+    <section class="sites-container">
+        <div class="card1">
+            <h3>Petshop Sushalu</h3>
+            <a href="">
+                <div class = 'sites'> 
+                    <div class = 'wrapper'>
+                        <img src="../statics/img/petshop-sushalu.webp" class = 'cover-image'/>
+                    </div>
+                    <img src="../statics/img/gato-imagen-removebg-preview.png" class='character'/>
+                </div>
+            </a>
+        </div>
+
+        <div class="card2">
+            <h3>LED Gamer's</h3>
+            <a href="">
+                <div class = 'sites'> 
+                    <div class = 'wrapper'>
+                        <img src="../statics/img/fundo-loja-gamer.avif" class = 'cover-image'/>
+                    </div>
+                    <img src="../statics/img/DALL_E-2025-03-10-09.58.00-A-futuristic-LED-themed-text-logo-for-a-gaming-store-named-_LED-GAMER_-removebg-preview(1).png" class="title"/>
+                    <img src="../statics/img/controle-loja-gamer.png" class='character'/>
+                </div>
+            </a>
+        </div>
+        <div class="card3">
+            <h3>ola</h3>
+            <a href="">
+                <div class = 'sites'> 
+                    <div class = 'wrapper'>
+                        <img src="../statics/img/petshop-sushalu.webp" class = 'cover-image'/>
+                    </div>
+                    <img src="../statics/img/gato-imagen-removebg-preview.png" class='character'/>
+                </div>
+            </a>
+        </div>
+    </section>
+    <footer> @Todos os direitos reservados</footer>
 </body>
 </html>
