--- a/CCG/Pagina_inicial/app/html/pagina_inicial.html
+++ b/CCG/Pagina_inicial/app/html/pagina_inicial.html
@@ -9,7 +9,7 @@
 <body >
     <header class="header">
         <div class="logo">
-            <h1>CCG interprise</h1>
+            <h1>CCG Enterprise</h1>
         </div>
 
         <nav class="nav">
