--- a/CCG/Led_gamers/app/html/login.html
+++ b/CCG/Led_gamers/app/html/login.html
@@ -1,29 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Animated Border Login Form</title>
+  <link rel="stylesheet" href="../statics/css/style_login.css">
 </head>
 <body>
-    <h1>Formulario de cadastro</h1>
-    <form action="/cadastro" method="POST">
-        <label for="name">Nome de usuario</label>
-        <input type="text" id="name" name="name" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-        <button type="submit">Login</button>
-    </form>
+  <div class="container">
+    <div class="flip-card" id="flip-card">
+      <div class="flip-card-inner">
+        
+        <!-- Tela de Login -->
+        <div class="flip-card-front">
+          <div class="box">
+            <div class="login">
+              <div class="loginBx">
+                <h2>
+                  <i class="fa-solid fa-right-to-bracket"></i>
+                  <h3 class="text">LOGIN</h3>
+                  <i class="fas fa-headset"></i>
+                </h2>
+                <form action="/login">
+                  <input type="text" placeholder="Username">
+                  <input type="password" placeholder="Password">
+                  <input type="submit" value="Sign in">
+                </form>
+                <div class="group">
+                  <a href="#">Forgot Password</a>
+                  <a href="#" onclick="flip()">Sign up</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    <h1>Formulario de login </h1>
-    <form action="/login" method="POST">
-        <label for="Usuario">Usuario</label>
-        <input type="text" id=" nome" name="nome" required>
-        <label for="Senha">Senha</label>
-        <input type="password" id="senha" name="senha" required>
-        <button type="submit">Login</button>
-    </form>
+        <!-- Tela de Cadastro -->
+        <div class="flip-card-back">
+          <div class="box">
+            <div class="login">
+              <div class="loginBx">
+                <h2>
+                  <i class="fa-solid fa-user-plus"></i>
+                  <h3 class="text">CADASTRO</h3>
+                  <i class="fas fa-headset"></i>
+                </h2>
+                <form action="/cadastro">
+                  <input type="text" placeholder="Username">
+                  <input type="password" placeholder="Password">
+                  <input type="submit" value="Sign up">
+                </form>
+                <div class="group">
+                  <a href="#" onclick="flip()">Voltar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function flip() {
+  document.querySelector(".flip-card").classList.toggle("flipped");
+  }
+  </script>
+
 </body>
 </html>
