--- a/CCG/Led_gamers/app/html/pagina1.html
+++ b/CCG/Led_gamers/app/html/pagina1.html
@@ -1,11 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login/Cadastro com Raios</title>
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            position: relative;
+            width: 300px;
+            height: 400px;
+            perspective: 1000px;
+        }
+        .flip-card {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            transition: transform 0.8s;
+            transform-style: preserve-3d;
+        }
+        .flipped {
+            transform: rotateY(180deg);
+        }
+        .card {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #222;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            backface-visibility: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(255, 255, 0, 0.5);
+            text-shadow: 0px 0px 10px yellow;
+        }
+        .back {
+            transform: rotateY(180deg);
+        }
+        @keyframes lightning {
+            0%, 100% { stroke-dashoffset: 0; opacity: 0.3; }
+            50% { stroke-dashoffset: 500; opacity: 1; }
+        }
+        .text {
+            font-size: 40px;
+            font-weight: bold;
+            font-family: Arial, sans-serif;
+            fill: none;
+            stroke: yellow;
+            text-shadow: 0px 0px 10px yellow;
+            stroke-width: 3;
+            stroke-dasharray: 500;
+            stroke-dashoffset: 500;
+            animation: lightning 1.5s infinite linear;
+        }
+        .button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: yellow;
+            color: black;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Forms</h1>
+    <div class="container">
+        <div class="flip-card" id="flip-card">
+            <div class="card front">
+                <svg width="200" height="80">
+                    <text x="10" y="50" class="text">LOGIN</text>
+                </svg>
+                <input type="text" placeholder="Usuário">
+                <input type="password" placeholder="Senha">
+                <button class="button">Entrar</button>
+                <button class="button" onclick="flip()">Cadastre-se</button>
+            </div>
+            <div class="card back">
+                <svg width="300" height="80">
+                    <text x="10" y="50" class="text">CADASTRO</text>
+                </svg>
+                <input type="text" placeholder="Nome">
+                <input type="text" placeholder="Email">
+                <input type="password" placeholder="Senha">
+                <button class="button">Registrar</button>
+                <button class="button" onclick="flip()">Voltar</button>
+            </div>
+        </div>
+    </div>
+    <script>
+        function flip() {
+            document.getElementById("flip-card").classList.toggle("flipped");
+        }
+    </script>
 </body>
 </html>
