finalizando o login da Led Gamer

--- a/CCG/Pagina_inicial/app/html/pagina_inicial.html
+++ b/CCG/Pagina_inicial/app/html/pagina_inicial.html
@@ -89,7 +89,7 @@
 
         <div class="card2">
             <h3>LED Gamer's</h3>
-            <a href="">
+            <a href="http://127.0.0.1:5003/auth/tela_login">
                 <div class = 'sites'> 
                     <div class = 'wrapper'>
                         <img src="../statics/img/fundo-loja-gamer.avif" class = 'cover-image'/>
