--- a/CCG/Led_gamers/app/html/tela_produtos.html
+++ b/CCG/Led_gamers/app/html/tela_produtos.html
@@ -56,8 +56,8 @@
             font-weight: bold;
             font-family: Arial, sans-serif;
             fill: none;
-            stroke: yellow;
-            text-shadow: 0px 0px 10px yellow;
+            stroke: white;
+            text-shadow: 0px 0px 10px white;
             stroke-width: 3;
             stroke-dasharray: 500;
             stroke-dashoffset: 500;
@@ -66,7 +66,7 @@
         .button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: yellow;
+            background-color: white;
             color: black;
             border: none;
             cursor: pointer;
